Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30069

Some examples appear twice when searching

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • Qt Creator 12.0.2
    • Qt Creator 12.0.1
    • All Other Issues
    • None
    • Windows
    • 542ae405f (12.0)

    Description

      Description:

      When in the example section of the design creator, if you use the search bar to find a specific example or a category, some examples will appear twice.

      The reason is that some examples are in more than one category and are therefore considered as being there twice, even if they are the exact same example.

      Steps to reproduce:

      1. Open Qt Creator
      2. Go in the examples section
      3. Type in the search bar "multimedia"
      4. You will see that several examples are doubled

       

      Expected behavior:

      Examples should appear only once.

      Observed behavior:

      Some examples will appear twice.

      Special notes:

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-30069
          # Subject Branch Project Status CR V

          Activity

            People

              con Eike Ziller
              fredericl Frederic Lefebvre
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes